--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,6 @@
+@import url('./fonts.css');
+@import url('./basic-root.css');
 @import url('./reset.css');
-@import url('./header.css');
 @import url('./container.css');
+@import url('./header.css');
+@import url('./footer.css');
