--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,18 @@
 @import url('./fonts.css');
 @import url('./basic-root.css');
 @import url('./reset.css');
+@import url('./basic-style.css');
 @import url('./container.css');
 @import url('./header.css');
+@import url('./theme-changer.css');
+@import url('./hero.css');
+@import url('./search.css');
+@import url('./element-not-found.css');
+@import url('./cocktails.css');
+@import url('./pagination-cocktails.css');
+@import url('./modal-cocktails.css');
+@import url('./modal-ingredients.css');
+@import url('./favor-cockt.css');
+@import url('./favor-ingred.css');
 @import url('./footer.css');
+@import url('./basic-modal-style.css');
