--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,5 @@
 <header class="header">
-  <div class="container"></div>
+  <div class="container">
+    <load src="./mobile-menu.html" />
+  </div>
 </header>
