--- a/src/partials/search.html
+++ b/src/partials/search.html
@@ -1,3 +1,8 @@
 <section class="search">
-  <div class="container"></div>
+  <div class="container">
+    <div class="container-letters">
+
+    </div>
+    <input id="search" class="search-input" name="search" type="text">
+  </div>
 </section>
