add logic of renedering buttons or select with letters and getting data from APIusing search

--- a/src/partials/search.html
+++ b/src/partials/search.html
@@ -1,8 +1,7 @@
 <section class="search">
   <div class="container">
     <div class="container-letters">
-
     </div>
-    <input id="search" class="search-input" name="search" type="text">
+    <input id="search" class="search-input" name="search" type="text" />
   </div>
 </section>
