--- a/src/css/search.css
+++ b/src/css/search.css
@@ -1,6 +1,53 @@
 .search-input {
+  display: block;
   width: 334px;
   height: 44px;
   border: 2px solid var(--color-accent);
   border-radius: 80px;
+  margin: 0 auto;
+}
+
+.buton-letters {
+  width: 40px;
+  height: 40px;
+  border-radius: 8px;
+  background-color: rgba(126, 143, 221, 0.4);
+  border: none;
+  color: var(--white);
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 1.5;
+}
+
+.buton-letters:hover,
+.buton-letters:active {
+  background-color: var(--tab);
+}
+
+.container-letters {
+  width: 904px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+  row-gap: 16px;
+  column-gap: 8px;
+}
+
+.letters-select {
+  display: block;
+  width: 90px;
+  height: 34px;
+  margin: 20px auto;
+  border: 1px solid var(--d-m-bg);
+  border-radius: 8px;
+  background-color: rgba(126, 143, 221, 0.4);
+  color: var(--white);
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+
+.is-hidden {
+  display: none;
 }
