--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,38 @@
 <footer class="footer">
-  <div class="container"></div>
+  <div class="container container-footer">
+    <div class="footer-logo-container">
+      <a class="footer-link" href="/index.html">
+        <span class="footer-logo">Drinkify</span>
+        <svg class="footer-icon" >
+          <use href="/img/sprite.svg#icon-cocktail"></use>
+        </svg>
+      </a>
+    </div>
+    <div class="footer-socail-container">
+      <p class="footer-text">We in social</p>
+      <ul class="footer-list">
+        <li>
+          <a href="https://www.facebook.com/goITclub/" target="_blank">
+            <svg class="footer-social-icon">
+              <use href="/img/sprite.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/goitclub/" target="_blank">
+            <svg class="footer-social-icon">
+              <use href="/img/sprite.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/c/GoIT" target="_blank">
+            <svg class="footer-social-icon">
+              <use href="/img/sprite.svg#icon-youtube"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </footer>
