--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,3 +16,4 @@
 @import url('./favor-ingred.css');
 @import url('./footer.css');
 @import url('./basic-modal-style.css');
+@import url('./mobile-menu.css');
