сторінка для улюблених інгредієнтів

--- a/src/partials/favor-ingred.html
+++ b/src/partials/favor-ingred.html
@@ -1,3 +1,6 @@
 <section class="favor-ingred">
-  <div class="container"></div>
+  <div class="container">
+    <h1 class="favor-ingred__title">Favorite ingredients</h1>
+    <ul class="favor-ingred__gallery"></ul>
+  </div>
 </section>
