--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -10,7 +10,7 @@
 <div class="backdrop-header container is-hidden" data-modal>
   <div class="head-mobile-div">
     <div class="bbb">
-      <a class="mobile-menu-logo" href="#"
+      <a class="mobile-menu-logo" href="./index.html"
         >DRINKIFY<svg class="mobile-menu-icon">
           <use href="./img/sprite.svg#icon-cocktail"></use>
         </svg>
@@ -37,7 +37,7 @@
 
   <div class="header-mobile-menu">
     <div class="head-menu-list">
-      <a class="head-menu-item" href="#">Home</a>
+      <a class="head-menu-item" href="./index.html">Home</a>
     </div>
 
     <div class="dropdown">
