update render-cocktails-cards js, css,html

--- a/src/partials/cocktails.html
+++ b/src/partials/cocktails.html
@@ -1,3 +1,17 @@
 <section class="cocktails" id="cocktails">
-  <div class="container"></div>
+  <div class="container">
+    <form class="search__form">
+      <input
+        type="text"
+        name="query"
+        autocomplete="off"
+        placeholder="Search cocktails..."
+      />
+      <button type="submit" class="submit">Search</button>
+    </form>  
+    <h2 class="search__title">Searching results</h2>   
+    <ul class="cocktails__list">
+  </ul>
+
+  </div>
 </section>
