--- a/src/partials/modal-cocktail.html
+++ b/src/partials/modal-cocktail.html
@@ -5,16 +5,16 @@
         <use href="/img/sprite.svg#icon-close"></use>
       </svg>
     </button>
-    <ul class="modal-cocktails-card list">
+    <ul class="modal-cocktails-card-part-1 list">
       <li class="modal-cocktails-card-item">
         <div class="modal-cocktails-img-wrapper">
           <img src="/img/ACID.jpg" alt="test" />
         </div>
       </li>
       <li class="modal-cocktails-card-item">
+        <h2 class="modal-cocktails-card-title">ACID</h2>
         <h2 class="modal-cocktails-info-part-title">INGREDIENTS:</h2>
         <p class="modal-cocktails-info-part-undotitle">Per cocktail</p>
-        <!-- //TEST -->
         <ul class="modal-cocktails-info-part-1-list">
           <li class="modal-cocktails-info-part-1-item">Ice</li>
           <li class="modal-cocktails-info-part-1-item">1 ounce gin</li>
@@ -23,32 +23,29 @@
           </li>
           <li class="modal-cocktails-info-part-1-item">Garnish: orange peel</li>
         </ul>
-        <!-- //TEST -->
-      </li>
-      <li class="modal-cocktails-card-item">
-        <h2 class="modal-cocktails-info-part-title">INSTRUCTIONS:</h2>
-        <!-- //TEST -->
-        <p class="modal-cocktails-info-part-2-text">
-          Add the gin, Campari and sweet vermouth to a mixing glass filled with
-          ice, and stir until well-chilled. Strain into a rocks glass filled
-          with large ice cubes. Garnish with an orange peel.
-        </p>
-        <!-- //TEST -->
-      </li>
-      <li class="modal-cocktails-card-item">
-        <ul class="modal-cocktails-buttons list">
-          <li class="modal-cocktails-buttons-item">
-            <button type="button" class="modal-button modal-button-favorite">
-              ADD TO FAVORITE
-            </button>
-          </li>
-          <li class="modal-cocktails-buttons-item">
-            <button type="button" class="modal-button modal-button-back">
-              BACK
-            </button>
-          </li>
-        </ul>
       </li>
     </ul>
+    <div class="modal-cocktails-card-part-2">
+      <h2 class="modal-cocktails-info-part-title">INSTRUCTIONS:</h2>
+      <p class="modal-cocktails-info-part-2-text">
+        Add the gin, Campari and sweet vermouth to a mixing glass filled with
+        ice, and stir until well-chilled. Strain into a rocks glass filled with
+        large ice cubes. Garnish with an orange peel.
+      </p>
+    </div>
+    <div class="modal-cocktails-card-buttons">
+      <ul class="modal-cocktails-buttons list">
+        <li class="modal-cocktails-buttons-item">
+          <button type="button" class="modal-button modal-button-favorite">
+            ADD TO FAVORITE
+          </button>
+        </li>
+        <li class="modal-cocktails-buttons-item">
+          <button type="button" class="modal-button modal-button-back">
+            BACK
+          </button>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
