--- a/src/css/modal-cocktails.css
+++ b/src/css/modal-cocktails.css
@@ -40,11 +40,14 @@
   stroke: var(--l-m-dark);
 }
 
-.modal-cocktails-card {
+.modal-cocktails-card-part-1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 40px;
+}
+.modal-cocktails-card-title {
+  display: none;
 }
 .modal-cocktails-info-part-title {
   font-family: 'Poppins';
@@ -77,6 +80,10 @@
 
   margin-top: 20px;
 }
+
+.modal-cocktails-card-part-2 {
+  margin-top: 40px;
+}
 .modal-cocktails-info-part-2-text {
   font-family: 'Poppins';
   font-size: 14px;
@@ -87,13 +94,15 @@
   margin-top: 14px;
 }
 
+.modal-cocktails-card-buttons {
+  margin-top: 40px;
+}
 .modal-cocktails-buttons {
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 14px;
 }
-
 .modal-button {
   width: 100%;
   height: 48px;
@@ -123,4 +132,58 @@
 .modal-button-back:hover,
 .modal-button-back:focus {
   background-color: #24242433;
+}
+
+@media screen and (min-width: 768px) {
+  .wrapper-modal-cocktails {
+    max-height: 569px;
+    width: 600px;
+    padding: 40px 40px;
+  }
+
+  .modal-cocktails-card-part-1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    gap: 20px;
+  }
+  .modal-cocktails-card-title {
+    display: block;
+    font-family: 'Poppins';
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 24px;
+  }
+  .modal-cocktails-info-part-title {
+    margin-top: 20px;
+  }
+
+  .modal-cocktails-card-part-2 {
+    margin-top: 20px;
+  }
+  .modal-cocktails-info-part-2-text {
+    margin-top: 18px;
+  }
+
+  .modal-cocktails-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    gap: 18px;
+  }
+  .modal-button {
+    width: auto;
+    height: 56px;
+    padding: 16px;
+  }
+  .modal-button-favorite {
+    width: 251px;
+    color: var(--white);
+    background-color: var(--color-accent);
+  }
+  .modal-button-back {
+    width: 172px;
+    color: var(--l-m-dark);
+    background-color: #2424241a;
+  }
 }
