--- a/src/partials/cocktails.html
+++ b/src/partials/cocktails.html
@@ -1,8 +1,6 @@
-<section class="cocktails" id="cocktails">
+<section class="cocktails change-theme" id="cocktails">
   <div class="container">
-    <h2 class="search__title">Searching results</h2>   
-    <ul class="cocktails__list">
-  </ul>
-
+    <h2 class="search__title">Searching results</h2>
+    <ul class="cocktails__list"></ul>
   </div>
 </section>
