--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -8,86 +8,87 @@
       From classic sips to exotic mixes, we're your key to becoming a cocktail
       wizard!
     </p>
-    <button type="button" class="hero-button">view cocktails</button>
+    <a class="hero-button" href="#cocktails">view cocktails</a>
+    <!-- <button type="button"></button> -->
   </div>
   <div class="hero-right">
     <div class="background">
       <picture>
         <source
-          srcset="../img/hero/elements_desctop.png 1x"
+          srcset="./img/hero/elements_desctop.png 1x"
           media="(min-width: 1280px)"
         />
         <source
-          srcset="../img/hero/elements_tablet.png 1x"
+          srcset="./img/hero/elements_tablet.png 1x"
           media="(min-width: 768px)"
         />
         <source
-          srcset="../img/hero/elements_mobile.png 1x"
+          srcset="./img/hero/elements_mobile.png 1x"
           media="(min-width: 375px)"
         />
         <img
           class="hero-right-background1"
-          src="../img/hero/elements_desctop.png"
+          src="./img/hero/elements_desctop.png"
           alt=""
           ;
         />
       </picture>
       <picture>
         <source
-          srcset="../img/hero/rectangle725_desctop.png 1x"
+          srcset="./img/hero/rectangle725_desctop.png 1x"
           media="(min-width: 1280px)"
         />
         <source
-          srcset="../img/hero/rectangle725_tablet.png 1x"
+          srcset="./img/hero/rectangle725_tablet.png 1x"
           media="(min-width: 768px)"
         />
         <source
-          srcset="../img/hero/rectangle725_mobile.png 1x"
+          srcset="./img/hero/rectangle725_mobile.png 1x"
           media="(min-width: 375px)"
         />
         <img
           class="hero-right-background2"
-          src="../img/hero/rectangle725_desctop.png"
+          src="./img/hero/rectangle725_desctop.png"
           alt=""
           ;
         />
       </picture>
       <picture>
         <source
-          srcset="../img/hero/girl_desctop.png 1x"
+          srcset="./img/hero/girl_desctop.png 1x"
           media="(min-width: 1280px)"
         />
         <source
-          srcset="../img/hero/girl_tablet.png 1x"
+          srcset="./img/hero/girl_tablet.png 1x"
           media="(min-width: 768px)"
         />
         <source
-          srcset="../img/hero/girl_mobile.png 1x"
+          srcset="./img/hero/girl_mobile.png 1x"
           media="(min-width: 375px)"
         />
         <img
           class="hero-right-background3"
-          src="../img/hero/girl_desctop.png"
+          src="./img/hero/girl_desctop.png"
           alt=""
           ;
         />
       </picture>
       <picture>
         <source
-          srcset="../img/hero/elements_desctop_dark.png 1x"
+          srcset="./img/hero/elements_desctop_dark.png 1x"
           media="(min-width: 1280px)"
         />
         <source
-          srcset="../img/hero/elements_tablet_dark.png 1x"
+          srcset="./img/hero/elements_tablet_dark.png 1x"
           media="(min-width: 768px)"
         />
         <source
-          srcset="../img/hero/elements_mobile_dark.png 1x"
+          srcset="./img/hero/elements_mobile_dark.png 1x"
           media="(min-width: 320px)"
         />
         <img
           class="hero-right-background1_dark"
-          src="../img/hero/elements_desctop_dark.png"
+          src="./img/hero/elements_desctop_dark.png"
           alt=""
           ;
         />
