--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -32,6 +32,9 @@
 }
 
 .hero-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding-block: 0;
   padding-inline: 0;
   cursor: pointer;
@@ -42,12 +45,12 @@
   font-family: Poppins;
   font-style: normal;
   text-transform: uppercase;
+  transition: background-color var(--t-dur) var(--t-tf);
 }
 
 .hero-button:hover,
 .hero-button:focus {
   background-color: var(--btn-h);
-  transition: background-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (max-width: 767.98px) {
