--- a/src/partials/search.html
+++ b/src/partials/search.html
@@ -1,7 +1,17 @@
 <section class="search">
   <div class="container">
-    <div class="container-letters">
+    <div class="container-letters"></div>
+    <div class="search-input-container">
+      <input
+        id="search"
+        class="search-input"
+        placeholder="Search"
+        name="search"
+        type="text"
+      />
+      <svg class="icon-search change-theme">
+        <use href="../img/sprite.svg#icon-search"></use>
+      </svg>
     </div>
-    <input id="search" class="search-input" name="search" type="text" />
   </div>
 </section>
