add logic search query + fetch + pagin

--- a/src/partials/cocktails.html
+++ b/src/partials/cocktails.html
@@ -1,6 +1,10 @@
 <section class="cocktails change-theme" id="cocktails">
   <div class="container">
-    <h2 class="search__title">Searching results</h2>
+    <h2 class="search__title">Cocktails</h2>
     <ul class="cocktails__list"></ul>
+    <div
+      class="pagination-elements visually-hidden"
+      id="pagination-elements"
+    ></div>
   </div>
 </section>
