--- a/src/partials/search.html
+++ b/src/partials/search.html
@@ -2,13 +2,15 @@
   <div class="container">
     <div class="container-letters"></div>
     <div class="search-input-container">
-      <input
-        id="search"
-        class="search-input"
-        placeholder="Search"
-        name="search"
-        type="text"
-      />
+      <form class="search-form">
+        <input
+          id="search"
+          class="search-input"
+          placeholder="Search"
+          name="search"
+          type="text"
+        />
+      </form>
       <svg class="icon-search change-theme">
         <use href="../img/sprite.svg#icon-search"></use>
       </svg>
