--- a/src/css/cocktails.css
+++ b/src/css/cocktails.css
@@ -1,5 +1,5 @@
 .cocktails {
-  padding-top: 142px;
+  padding-top: 50px;
   padding-bottom: 100px;
   color: var(--l-m-dark);
 }
@@ -11,12 +11,19 @@
   margin-bottom: 40px;
 }
 .search__title {
-  margin-bottom: 40px;
+  margin-bottom: 44px;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.2;
+}
+.cocktails__list {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 20px;
+  justify-content: center;
 }
 @media screen and (min-width: 768px) {
   .cocktails__list {
-    display: flex;
-    flex-wrap: wrap;
     row-gap: 32px;
     column-gap: 16px;
   }
@@ -32,6 +39,7 @@
   padding: 14px 14px 14px 20px;
   background-color: var(--white);
   border-radius: 16px;
+  width: 335px;
 }
 /* dark mode style+++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 .cocktails__item.dark-mode {
@@ -47,13 +55,13 @@
 
     margin-bottom: 0;
 
-    width: calc((100% - 16px) / 2);
+    width: 344px;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .cocktails__item {
-    width: calc((100% - 2 * 24px) / 3);
+    width: 344px;
   }
 }
 
