--- a/src/css/pagination-cocktails.css
+++ b/src/css/pagination-cocktails.css
@@ -3,7 +3,7 @@
   justify-content: center;
   flex-wrap: wrap;
   gap: 10px;
-  padding: 10px 0;
+  padding-top: 64px;
 }
 .js-pagination-btn {
   font-family: 'Montserrat';
