--- a/src/partials/search.html
+++ b/src/partials/search.html
@@ -12,7 +12,7 @@
         />
       </form>
       <svg class="icon-search change-theme">
-        <use href="../img/sprite.svg#icon-search"></use>
+        <use href="./img/sprite.svg#icon-search"></use>
       </svg>
     </div>
   </div>
