--- a/src/css/favor-ingred.css
+++ b/src/css/favor-ingred.css
@@ -1,7 +1,9 @@
 .basicLightbox {
     background: #fafafa00;
 }
-
+.basicLightbox.dark-mode {
+    background: #000c;
+}
 .modal {
   overflow-y: scroll;
   border-radius: 15px;
@@ -13,7 +15,10 @@
   width: 330px;
   height: 330px;
 }
-
+.modal.dark-mode {
+    background-color: #fdfdff;
+    color: #242424;
+}
 @media screen and (min-width: 768px) {
   .favor-ingred__gallery {
     display: flex;
@@ -42,7 +47,7 @@
   margin-bottom: 40px;
 }
 
-.favor-ingred__title.dark {
+.favor-ingred__title.dark-mode {
   color: #fdfdff;
 }
 
@@ -69,7 +74,7 @@
   box-shadow: 0px 4px 46px 0px rgba(0, 0, 0, 0.05);
 }
 
-.favor-ingred__card-item.dark {
+.favor-ingred__card-item.dark-mode {
   background: #232330;
 }
 
@@ -107,7 +112,7 @@
   margin-bottom: 4px;
 }
 
-.favor-ingred__title-name.dark {
+.favor-ingred__title-name.dark-mode {
   color: #fdfdff;
 }
 
@@ -129,7 +134,7 @@
   margin-bottom: 14px;
 }
 
-.favor-ingred__text-alco.dark {
+.favor-ingred__text-alco.dark-mode {
   color: rgba(253, 253, 255, 0.5);
 }
 
@@ -151,7 +156,7 @@
   margin-bottom: 20px;
 }
 
-.favor-ingred__text-descr.dark {
+.favor-ingred__text-descr.dark-mode {
   color: #fdfdff;
 }
 
@@ -190,7 +195,7 @@
   border: 1px solid #7e8fdd;
 }
 
-.card__close.dark {
+.card__close.dark-mode {
   color: #fdfdff;
 }
 
