--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,299 +1,126 @@
-.logo {
-    font-family: Poppins;
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.logo-link {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+
+.logo-name {
+    color: #242424;
     font-size: 22px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px;
+    letter-spacing: -0.22px;
+    text-transform: uppercase;
+
+
+    font-size: 16px;
     font-weight: 600;
     line-height: 18px;
-    letter-spacing: -0.01em;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    letter-spacing: -0.16px;
+    text-transform: uppercase;
 }
 
-.icon {
-    width: 29px;
-    height: 25px;
-    fill: #7E8FDD;
-    margin-left: 4px;
+.logo-icon {
+    fill: #6B7DC9;
+    width: 21px;
+    height: 18px;
 }
 
-@media screen and (min-width: 768px) {
-    .logo {
-        margin-right: 88px;
-    }
-}
-
-@media screen and (min-width: 1200px) {
-    .logo {
-        margin-right: 93px;
-    }
-}
-
-.container {
-    padding: 0;
-}
-
-.header {
-    position: relative;
-    margin: 37px 100px;
-
-}
-
-@media (max-width: 767.98px) {
-    .header {
-        padding: 16px 0;
-    }
-}
-
-.header__container {
-    position: relative;
-    display: flex;
-    align-items: baseline;
-
-}
-
-.header__wrapper {
-    display: inline-block;
-    width: auto;
-    justify-content: space-between;
-    align-items: center;
-
-}
-
-
-@media (max-width: 767.98px) {
-    .header__wrapper {
-        position: fixed;
-        top: 0;
-        left: 0;
+/* Mobile/Tablet Styles */
+@media (max-width: 767px) {
+    header {
         display: flex;
-        flex-direction: column;
         justify-content: space-between;
-        width: 100vw;
-        height: 100vh;
-        padding: 48px 40px;
-        z-index: 2;
-        font-size: 40px;
-        line-height: 1.17;
-        letter-spacing: 0.02em;
-        transform: translateX(100%);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        padding: 20px 27px;
     }
 
-    .header__wrapper.is-open {
-        transform: translateX(0);
-    }
-}
-
-@media (min-width: 768px) {
-    .header__wrapper {
-        display: flex;
-        align-items: center;
-        font-size: 14px;
-        line-height: 16px;
-        letter-spacing: 0.02em;
-        color: #212121;
-    }
-}
-
-.menu {
-    position: fixed;
-    top: 11px;
-    right: 25px;
-    display: flex;
-    padding: 0;
-    border: none;
-    cursor: pointer;
-    z-index: 5;
-    background-color: transparent;
-}
-
-@media (min-width: 768px) {
-    .menu {
+    nav {
         display: none;
     }
-}
 
-.menu__close {
-    display: none;
-}
-
-.is-open .menu__close {
-    display: block;
-}
-
-.menu__burger {
-    color: black;
-    width: 32px;
-    height: 32px;
-}
-
-.is-open .menu__burger {
-    display: none;
-}
-
-@media (min-width: 768px) {
-    .nav {
-        margin-right: 70px;
+    .menu-burger {
+       fill: #242424;
+       width :40px;
+       height: 40px;
     }
 }
 
-@media (min-width: 1200px) {
-    .nav {
-        margin-right: 300px;
-    }
-}
-
+/* Desktop Styles */
 @media (min-width: 768px) {
-    .site-nav {
+    header {
         display: flex;
+        justify-content: space-between;
+        padding: 37px 100px;
     }
-}
 
-@media (max-width: 767.98px) {
-    .site-nav__item:not(:last-child) {
-        margin-right: 32px;
+
+    .desktop-menu {
+        list-style: none;
+        display: flex;
+        align-items: baseline;
     }
-}
 
-@media (min-width: 768px) {
-    .site-nav__item:not(:last-child) {
-        margin-right: 50px;
+    .desktop-menu li {
+        margin-right: 20px;
     }
-}
 
-.site-nav {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    align-items: center;
-}
+    .favorite:hover .submenu, .submenu:focus {
+        display: block;
+    }
 
+   
 
-.site-nav__link {
-    display: inline-block;
-    color: #242424;
-    font-family: Poppins;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 18px;
-    letter-spacing: 0.32px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.site-nav__item {
-    margin-right: 20px;
-}
-
-.chevron-down {
+    .chevron-down {
     width: 24px;
     height: 24px;
-    fill: #7E8FDD;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 16px;
-}
+    stroke: #6B7DC9;
+    vertical-align:text-top
+    }
+       
 
-/*dropdown menu*/
-.nav-item-dropdown {
-    position: relative;
-}
+    .submenu {
+        display: none;
+        position: absolute;
+        left: 9%;
+        top: 9%;
+        border-radius: 16px;
+        background: #7E8FDD;
+        padding: 18px 24px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 8px;
 
-.nav-item-dropdown .dropdown-menu {
-    display: block;
-   
-}
-.nav-item-dropdown:hover .dropdown-menu {
-    display: block;
-    opacity: 1;
-    pointer-events: auto;
-}
-
-
-.dropdown-trigger {
-    position: relative;
-}
-.dropdown-trigger:focus + .dropdown-menu {
-    display: block;
-    opacity: 1;
-}
-.dropdown-trigger::after {
-    background-image: url('../img/sprite.svg#icon-chevron-down');
-    background-repeat: no-repeat;
-   
+        color: #FDFDFF;
+        font-family: Poppins;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 18px;
+        letter-spacing: 0.28px;
+        transition: background-color 0.9s;
+    }
     
-    width: 24px;
-    height: 24px;
-    position: absolute;
-    color: #7E8FDD;
-    top: -5px;
-    right: -15px;
-}
-
-  
-.dropdown-menu {
-    color: #FDFDFF;
-    font-family: Poppins;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 18px;
-    letter-spacing: 0.28px;
-    background: #7E8FDD;
-    border-radius: 16px;
-    display: inline-block;
-    text-align: center;
-    position: absolute;
-    top: 2.5rem;
-    right: 50;
-    display: none;
-    opacity: 0;
-    transition: opacity 0.9s ease;
-    width: 192px;
-    height: 80px;
-    padding: 18px 24px;
-}
-
-.dropdown-menu-item {
-    cursor: pointer;
-    padding: 1em;
-    text-align: center;
-}
-.dropdown-menu-item:hover {
-    background-color: darken(#7E8FDD, 5%);
-}
-
-
-
-
-
-.dropdown-menu__link {
-    color: #FDFDFF;
-    font-family: Poppins;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 18px;
-    letter-spacing: 0.28px;
-
-
-
-
-}
-
-@media (max-width: 767.98px) {
-    .site-nav__link {
-        margin-bottom: 32px;
-        padding: 0;
-        font-size: 40px;
-        line-height: 47px;
-        letter-spacing: 0.02em;
+    .submenu li {
+        margin: 5px 0;
     }
+    .submenu li:hover {
+        color: rgba(253, 253, 255, 0.50);
+        }
+
+    .menu-toggle {
+        width: 64px;
+        height: 32px;
+        background-color: #6B7DC9;
+    }
+    .menu-button {
+        display: none;
+    }
+
 }
-
-
-@media (min-width: 768px) {}
-
