--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -22,7 +22,7 @@
     <a class="logo-link" href="/index.html">
       <span class="logo-name">Drinkify</span>
       <svg class="logo-icon">
-        <use href="../img/sprite.svg#icon-cocktail"></use>
+        <use href="./img/sprite.svg#icon-cocktail"></use>
       </svg>
     </a>
   </div>
@@ -35,7 +35,7 @@
 
   <button class="menu-button" data-modal-open>
     <svg class="menu-burger" width="40" height="40">
-      <use href="../img/sprite.svg#icon-burger"></use>
+      <use href="./img/sprite.svg#icon-burger"></use>
     </svg>
   </button>
   <load src="./mobile-menu.html" />
