--- a/src/css/element-not-found.css
+++ b/src/css/element-not-found.css
@@ -5,7 +5,7 @@
   margin-right: auto;
 }
 
-no_result_title {
+.no_result_title {
   margin-block-end: 0px;
   margin-block-start: 0px;
   color: var(--l-m-dark);
