favor-cockt.html_favor-cocts.js_update

--- a/src/partials/favor-cockt.html
+++ b/src/partials/favor-cockt.html
@@ -1,3 +1,6 @@
 <section class="favor-cockt">
-  <div class="container"></div>
+  <div class="container">
+    <ul class="favor__list">
+    </ul>  
+  </div>
 </section>
