--- a/src/partials/favor-ingred.html
+++ b/src/partials/favor-ingred.html
@@ -3,4 +3,8 @@
     <h1 class="favor-ingred__title">Favorite ingredients</h1>
     <ul class="favor-ingred__gallery"></ul>
   </div>
+  <div
+      class="pagination-elements visually-hidden"
+      id="pagination-elements"
+    ></div>
 </section>
