--- a/src/css/cocktails.css
+++ b/src/css/cocktails.css
@@ -14,7 +14,7 @@
       }
   
 
-.cocktails__item, .favor__item{
+.cocktails__item{
   padding: 14px 14px 14px 20px;
   }
   .cocktails__item :not(:last-child){
@@ -23,7 +23,7 @@
   
  
 @media screen and (min-width:768px) {
-  .cocktails__item, .favor__item{
+  .cocktails__item{
       padding-bottom: 24px;
 
       margin-bottom: 0;
@@ -34,7 +34,7 @@
 }
 
 @media screen and (min-width:1280px) {
-  .cocktails__item, .favor__item{
+  .cocktails__item{
 
       width:calc((100% - 2 * 16px) / 4);
 }
@@ -99,7 +99,7 @@ border: transparent;
 border-radius: 12px;
 background: #7E8FDD;
 }
-.svg-heart, .svg-icon{
+.svg-heart{
 pointer-events: none;
   width: 48px;
   height: 48px;
